# multi-agent-daily-report

./: .gitignore  README-CN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
cfg/: config.example.yaml
cfg/calendar/: holiday-cn-2026.json
examples/: report-context.json
scripts/: claude-send-yesterday-qq.sh  workday.py
skills/: SKILL.md
src/multi_agent_daily_report/: cli.py  compact.py  config.py  date_utils.py  db.py  models.py  text_utils.py
src/multi_agent_daily_report/collectors/: __init__.py  base.py  claude.py  codex.py  cursor.py  git.py
src/multi_agent_daily_report/notifiers/: qq_official.py
tests/: test_compact.py  test_config.py  test_date_utils.py  test_text_utils.py
