[project]
name = "multi-agent-daily-report"
version = "0.1.0"
description = "Collect multi-agent activity and prepare daily report context."
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0.0"]

[project.optional-dependencies]
mysql = ["pymysql>=1.1.0"]
dev = ["pytest>=7", "ruff>=0.5", "mypy>=1.0"]

[project.scripts]
daily-report = "multi_agent_daily_report.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
multi_agent_daily_report = ["py.typed"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pymysql"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["multi_agent_daily_report"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
